Touched up a few things and created an FPGA-specific version of my resume

--- a/Resume/fpga_resume.html
+++ b/Resume/fpga_resume.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Matt Hartnett - Resume</title>
+  <title>Matt Hartnett - Resume (FPGA)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     /* --- Page + print tuning --- */
@@ -21,7 +21,7 @@
     body {
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Noto Sans", sans-serif;
       color: #111;
-      font-size: 10pt;
+      font-size: 8pt;
       line-height: 1.28;
       -webkit-print-color-adjust: exact;
       print-color-adjust: exact;
@@ -182,12 +182,9 @@
         <li><strong>Digital Design:</strong> SystemVerilog RTL, Vivado, DSP, High Speed Interfaces, Tcl, VHDL, Quartus,
           Libero</li>
         <li><strong>Digital Verification:</strong> SystemVerilog TB, Cocotb, Verilator, xsim, Modelsim</li>
-        <li><strong>Circuit Design and Analysis:</strong> LTSpice, Advanced Design System, Soldering, Solidworks
-          Electrical, DipTrace, Eagle</li>
         <li><strong>Software Development:</strong> Python, C++, C, Java</li>
         <li><strong>Linux Development:</strong> Ubuntu, Fedora, Buildroot, Yocto, PetaLinux</li>
         <li><strong>Embedded Programming:</strong> Embedded C, Codasip, Arduino, Raspberry Pi</li>
-        <li><strong>Web Development:</strong> HTML, CSS, Javascript, PHP, SQL</li>
         <li><strong>Software Systems:</strong> Git, CI/CD, Matlab, Simulink Real-time, OpenCV, SVN</li>
         <li><strong>Debugging:</strong> Simulation with Testbenches, Hardware with Logic Analyzers, Scopes, and other
           tools</li>
@@ -258,7 +255,9 @@
         </table>
         <ul>
           <li>Wrote low-level, hardware interface flight software for the Command and Data Handling (C&DH) Unit on the
-            SPRITE cubesat mission.</li>
+            SPRITE
+            cubesat
+            mission.</li>
           <li>Developed an FPGA-based solution to test the scientific instrument on the ground with a simple, robust
             interface to enable rapid verification.</li>
           <li>Wrote an image compression algorithm that reduced the scientific data to 1/10th of the original size,
@@ -266,55 +265,6 @@
         </ul>
       </div>
 
-      <div class="job avoid-break">
-        <table class="jobhead">
-          <tr>
-            <td class="jobleft">
-              <div class="role">Teaching Assistant - Circuits 1 for Engineers</div>
-              <div class="where">Boulder, CO</div>
-            </td>
-            <td class="jobright">08/2021–12/2021</td>
-          </tr>
-        </table>
-        <ul>
-          <li>Provided support to students in lab and in office hours.</li>
-          <li>Graded lab reports and created answer keys.</li>
-          <li>Developed midterm questions and helped course organization.</li>
-        </ul>
-      </div>
-
-      <div class="job avoid-break">
-        <table class="jobhead">
-          <tr>
-            <td class="jobleft">
-              <div class="role">IT Technician - Leeds School of Business</div>
-              <div class="where">Boulder, CO</div>
-            </td>
-            <td class="jobright">01/2020–01/2021</td>
-          </tr>
-        </table>
-        <ul>
-          <li>Installed and configured hardware and software for workstations and classrooms.</li>
-          <li>Communicated technical information through emails and phone calls.</li>
-        </ul>
-      </div>
-
-      <div class="job avoid-break">
-        <table class="jobhead">
-          <tr>
-            <td class="jobleft">
-              <div class="role">Robotics Research Assistant - Advanced Robotics Perception Group</div>
-              <div class="where">Boulder, CO</div>
-            </td>
-            <td class="jobright">09/2019–05/2020</td>
-          </tr>
-        </table>
-        <ul>
-          <li>Worked with a large team building a complex navigation robot.</li>
-          <li>Used OpenCV for object detection and identification, specifically heat signatures of human dummies,
-            phones, and vents with &gt;80% accuracy.</li>
-        </ul>
-      </div>
     </section>
 
     <!-- Education -->
@@ -385,31 +335,6 @@
       </div>
 
       <div class="project avoid-break">
-        <div class="project-title">Senior Design Capstone (FRANKLIN)</div>
-        <ul>
-          <li>Team lead for a phase-coherent remote sensing system.</li>
-          <li>Developed FPGA-based data collection and storage.</li>
-        </ul>
-      </div>
-
-      <div class="project avoid-break">
-        <div class="project-title">GSE Detector Readout</div>
-        <ul>
-          <li>Used an FPGA to read detector data at full speed and stream over 100 Mb/s Ethernet to a PC for live
-            readout.</li>
-          <li>Implemented a MicroBlaze processor on a Spartan-7 FPGA to run the TCP stack in C.</li>
-        </ul>
-      </div>
-
-      <div class="project avoid-break">
-        <div class="project-title">3D Drone Mapping Simulation</div>
-        <ul>
-          <li>Autonomously mapped 3D environments in Webots.</li>
-          <li>Planned exploration with a rapidly-exploring random tree to target unmapped areas.</li>
-        </ul>
-      </div>
-
-      <div class="project avoid-break">
         <div class="project-title">5-Stage RISC-V Processor</div>
         <ul>
           <li>Built a fully functional processor in Codasip using C++, then adapted to synthesizable RTL with I/O
@@ -419,15 +344,6 @@
       </div>
     </section>
 
-    <!-- References -->
-    <section class="avoid-break">
-      <h2>References</h2>
-      <strong>Dominic Doty</strong> - Software Development Engineer, Amazon - <a
-        href="mailto:doty.dominic@gmail.com">doty.dominic@gmail.com</a> - (303) 704-8313
-      <br>
-      <strong>Jack Williams, PhD</strong> - Senior Electrical Engineer, Blue Canyon Technologies - (303) 735-8727
-
-    </section>
   </div>
 </body>
 
