Cleaned up some the text

--- a/Resume/fpga_resume.html
+++ b/Resume/fpga_resume.html
@@ -200,7 +200,7 @@
         <table class="jobhead">
           <tr>
             <td class="jobleft">
-              <div class="role">Embedded Systems Engineer - FIRST RF</div>
+              <div class="role">Embedded Systems Engineer • FIRST RF</div>
               <div class="where">Boulder, CO</div>
             </td>
             <td class="jobright">10/2024–Present</td>
@@ -208,13 +208,13 @@
         </table>
         <ul>
           <li>Architected and implemented the full FPGA/HDL stack for a production RADAR system, owning design from
-            module-level RTL to system integration. Included high speed interfaces, on-chip processing, and device to
+            module level RTL to system integration. Included high speed interfaces, on-chip processing, and device to
             device synchronization.</li>
           <li>Delivered a new DSP pipeline that increased usable bandwidth 4×, improved SNR by ~20 dB, reduced logic
-            utilization, and lowered end-to-end latency; modeled algorithms in Python/NumPy and verified with exhaustive
+            utilization, and lowered end to end latency; modeled algorithms in Python/NumPy and verified with exhaustive
             testbenches.</li>
-          <li>Engineered a cycle-accurate, latency-constrained data path to meet strict RADAR timeline requirements;
-            performed both simulation-based and on-hardware validation in partnership with embedded/software teams.</li>
+          <li>Engineered a cycle accurate, latency constrained data path to meet strict RADAR timeline requirements;
+            performed both simulation based and on hardware validation in partnership with embedded/software teams.</li>
           <li>Modernized the internal HDL build system, enabling Verilator + cocotb flows; authored FIRST RF’s first
             cocotb testbenches and led full team adoption.</li>
         </ul>
@@ -224,7 +224,7 @@
         <table class="jobhead">
           <tr>
             <td class="jobleft">
-              <div class="role">Electrical Engineer II - Laboratory for Atmospheric and Space Physics</div>
+              <div class="role">Electrical Engineer II • Laboratory for Atmospheric and Space Physics</div>
               <div class="where">Boulder, CO</div>
             </td>
             <td class="jobright">06/2022–10/2024</td>
@@ -235,11 +235,11 @@
             the design and implementation of several test systems; designs included integration of COTS equipment,
             custom PCBs, and FPGA logic.</li>
           <li>Developed test racks from scratch: specifying, procuring, and assembling IT hardware, writing hardware
-            control firmware, designing interface harnesses, and authoring control software to enable long-duration,
-            mission-critical testing and integration.</li>
+            control firmware, designing interface harnesses, and authoring control software to enable long duration,
+            mission critical testing and integration.</li>
           <li>Served as the cognizant EGSE engineer, owning multiple projects from concept through qualification;
             including rigorous design reviews and compliance processes, and multi-team coordination to ensure
-            delivery-readiness and long-term mission support.</li>
+            delivery readiness and long term mission support.</li>
         </ul>
       </div>
 
@@ -247,18 +247,18 @@
         <table class="jobhead">
           <tr>
             <td class="jobleft">
-              <div class="role">Electrical Engineering Intern - Laboratory for Atmospheric and Space Physics</div>
+              <div class="role">Electrical Engineering Intern • Laboratory for Atmospheric and Space Physics</div>
               <div class="where">Boulder, CO</div>
             </td>
             <td class="jobright">01/2021–06/2022</td>
           </tr>
         </table>
         <ul>
-          <li>Wrote low-level, hardware interface flight software for the Command and Data Handling (C&DH) Unit on the
+          <li>Wrote low level, hardware interface flight software for the Command and Data Handling (C&DH) Unit on the
             SPRITE
             cubesat
             mission.</li>
-          <li>Developed an FPGA-based solution to test the scientific instrument on the ground with a simple, robust
+          <li>Developed an FPGA based solution to test the scientific instrument on the ground with a simple, robust
             interface to enable rapid verification.</li>
           <li>Wrote an image compression algorithm that reduced the scientific data to 1/10th of the original size,
             enabling the mission to meet TX requirements.</li>
@@ -274,7 +274,7 @@
         <table class="jobhead">
           <tr>
             <td class="jobleft">
-              <div class="role">MSEE, Embedded Systems Engineering - University of Colorado, Boulder</div>
+              <div class="role">MSEE, Embedded Systems Engineering • University of Colorado, Boulder</div>
               <div class="where">Boulder, CO</div>
             </td>
             <td class="jobright">08/2023–Present</td>
@@ -286,7 +286,7 @@
         <table class="jobhead">
           <tr>
             <td class="jobleft">
-              <div class="role">BS, Electrical and Computer Engineering - University of Colorado, Boulder</div>
+              <div class="role">BS, Electrical and Computer Engineering • University of Colorado, Boulder</div>
               <div class="where">Boulder, CO</div>
             </td>
             <td class="jobright">08/2019–05/2022</td>
@@ -302,12 +302,12 @@
       <div class="project avoid-break">
         <div class="project-title">Skyler Phased Array RADAR</div>
         <ul>
-          <li>Designed the end-to-end DSP chain and datapath (filtering, decimation/interpolation, mixing, 1 Gb/s
-            Ethernet framing), then implemented cycle-accurate RTL with thorough TB coverage.</li>
+          <li>Designed the end to end DSP chain and datapath (filtering, decimation/interpolation, mixing, 1 Gb/s
+            Ethernet framing), then implemented cycle accurate RTL with thorough TB coverage.</li>
           <li>Built a layered verification strategy (SystemVerilog TB + cocotb with Verilator) to catch interface,
             timing, and algorithmic defects early; mirrored tests on hardware for parity and end product verification.
           </li>
-          <li>Drove cross-functional integration and bring-up with embedded and application software, closing timing on
+          <li>Drove cross functional integration and bring up with embedded and application software, closing timing on
             high utilization designs while meeting RADAR timeline constraints.</li>
         </ul>
       </div>
@@ -326,7 +326,7 @@
       <div class="project avoid-break">
         <div class="project-title">Libera EL Lifetest</div>
         <ul>
-          <li>Designed, implemented, and qualified the test bed for a 5-year pre-flight motor verification lifespan
+          <li>Designed, implemented, and qualified the test bed for a 5 year pre-flight motor verification lifespan
             test.</li>
           <li>Designed a custom interconnect PCB and multiple harnesses to integrate dozens of components into a
             cohesive system with minimal harnessing.
@@ -338,7 +338,7 @@
         <div class="project-title">5-Stage RISC-V Processor</div>
         <ul>
           <li>Built a fully functional processor in Codasip using C++, then adapted to synthesizable RTL with I/O
-            management and off-chip RAM access.</li>
+            management and off chip RAM access.</li>
           <li>Achieved 100% verification coverage; designed with full ISA support and ECC memory.</li>
         </ul>
       </div>
