--- a/Resume/fpga_resume.html
+++ b/Resume/fpga_resume.html
@@ -1,194 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
-  <title>Matt Hartnett - Resume (FPGA)</title>
+  <title>Matt Hartnett – Resume (FPGA)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    /* --- Page + print tuning --- */
-    @page {
-      size: letter;
-      margin: 0.55in;
-    }
-
-    html,
+    /* --- Page --- */
+    @page { size: letter; margin: 0.6in; }
+    html, body { margin: 0; padding: 0; }
     body {
-      padding: 0;
-      margin: 0;
-    }
-
-    body {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Noto Sans", sans-serif;
-      color: #111;
-      font-size: 8pt;
-      line-height: 1.28;
+      font: 8.5pt/1.35 -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      color: #1a1a1a;
       -webkit-print-color-adjust: exact;
       print-color-adjust: exact;
     }
 
-    /* --- Container & spacing helpers --- */
-    .container {
-      max-width: 8.5in;
-      margin: 0 auto;
-    }
-
-    .tight {
-      margin: 0 0 0 1.05rem;
-      padding: 0;
-    }
-
-    .mb-2 {
-      margin-bottom: .2rem;
-    }
+    /* --- Layout --- */
+    .wrap { max-width: 8.5in; margin: 0 auto; }
+    section { margin-top: .55rem; }
+    .muted { color: #555; }
 
     /* --- Header --- */
-    header {
-      margin-bottom: .2rem;
-    }
-
-    h1 {
-      font-size: 24pt;
+    header { margin-bottom: .25rem; }
+    .name {
+      font-size: 19pt;
+      font-weight: 650;
       letter-spacing: .2px;
-      margin: 0 0 .1rem 0;
+      margin: 0;
       text-align: center;
     }
-
     .contact {
+      margin-top: .12rem;
+      font-size: 9pt;
       color: #444;
-      font-size: 9.2pt;
       text-align: center;
     }
+    .contact a { color: inherit; text-decoration: none; border-bottom: 1px dotted #bbb; }
+    .contact a:hover { border-bottom-color: #666; }
 
-    .contact a {
-      color: #0b57d0;
-      text-decoration: none;
-    }
-
-    .contact a:hover {
-      text-decoration: underline;
-    }
-
-    /* --- Section headings --- */
+    /* --- Section titles --- */
     h2 {
-      font-size: 11pt;
-      margin: .7rem 0 .2rem;
-      font-weight: 700;
-      letter-spacing: .3px;
-      text-transform: uppercase;
-      border-bottom: 1px solid #c9c9c9;
-      padding-bottom: .12rem;
+      font: 700 10.2pt/1.2 inherit;
+      margin: .6rem 0 .2rem 0;
+      padding-left: .35rem;
+      border-left: 3px solid #c9c9c9;
+      letter-spacing: .2px;
     }
 
-    /* --- Job header rows: TABLE for wkhtmltopdf reliability --- */
-    .job {
-      margin: 0 0 .35rem 0;
+    /* --- Experience block --- */
+    .block { page-break-inside: avoid; margin-bottom: .35rem; }
+    .row {
+      display: flex;
+      align-items: baseline;
+      gap: .5rem;
+      flex-wrap: nowrap;
     }
-
-    .jobhead {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    .jobhead td {
-      vertical-align: top;
-      padding: 0;
-    }
-
-    .jobleft {
-      width: 100%;
-    }
-
-    .jobright {
+    .row .left { flex: 1 1 auto; min-width: 0; }
+    .row .right {
+      flex: 0 0 auto;
       white-space: nowrap;
-      text-align: right;
-      color: #444;
-      width: 1%;
+      color: #555;
+      font-variant-numeric: tabular-nums;
     }
+    .role { font-weight: 700; }
+    .place { color: #444; }
+    .loc { color: #666; font-style: normal; }
 
-    .role {
-      font-weight: 700;
-    }
+    /* --- Lists --- */
+    ul { margin: .18rem 0 .28rem 1.0rem; padding: 0; }
+    li { margin: 0 0 .14rem 0; }
 
-    .where {
-      color: #444;
-    }
+    /* --- Projects --- */
+    .proj-title { font-weight: 700; margin-bottom: .05rem; }
 
-    /* --- Lists: compact bullets --- */
-    ul {
-      margin: .15rem 0 .35rem 1.05rem;
-      padding: 0;
-    }
+    /* --- Skills list --- */
+    .skills-list { margin: .18rem 0 .18rem 0; }
+    .skills-list li { margin: 0 0 .1rem 0; }
 
-    li {
-      margin: 0 0 .15rem 0;
-    }
-
-    /* --- Projects layout --- */
-    .project {
-      margin-bottom: .28rem;
-    }
-
-    .project-title {
-      font-weight: 700;
-    }
-
-    .project ul {
-      margin-top: .12rem;
-    }
-
-    /* --- Keep blocks together in print --- */
-    .avoid-break {
-      page-break-inside: avoid;
-    }
-
-    /* --- Small labels --- */
-    .muted {
-      color: #444;
-    }
-
+    /* --- Print tweaks --- */
     @media print {
-      a {
-        color: inherit;
-        text-decoration: none;
-      }
-
-      .contact a {
-        text-decoration: none;
-      }
+      a { color: inherit; text-decoration: none; }
     }
   </style>
 </head>
-
 <body>
-  <div class="container">
+  <div class="wrap">
     <header>
-      <h1>Matt Hartnett</h1>
+      <h1 class="name">Matt Hartnett</h1>
       <div class="contact">
-        <span><strong>Email:</strong> <a
-            href="mailto:matthew.e.hartnett@gmail.com">matthew.e.hartnett@gmail.com</a></span>
-        &nbsp;•&nbsp;
-        <span><strong>GitHub:</strong> <a href="https://github.com/hartnettmatt">github.com/hartnettmatt</a></span>
-        &nbsp;•&nbsp;
-        <span><strong>LinkedIn:</strong> <a
-            href="https://www.linkedin.com/in/hartnettmatt">linkedin.com/in/hartnettmatt</a></span>
+        <a href="mailto:matthew.e.hartnett@gmail.com">matthew.e.hartnett@gmail.com</a>
+        &nbsp;&middot;&nbsp;
+        <a href="https://github.com/hartnettmatt">github.com/hartnettmatt</a>
+        &nbsp;&middot;&nbsp;
+        <a href="https://www.linkedin.com/in/hartnettmatt">linkedin.com/in/hartnettmatt</a>
       </div>
     </header>
 
     <!-- Skills -->
-    <section class="avoid-break">
+    <section>
       <h2>Skills</h2>
-      <ul class="tight">
-        <li><strong>Digital Design:</strong> SystemVerilog RTL, Vivado, DSP, High Speed Interfaces, Tcl, VHDL, Quartus,
-          Libero</li>
-        <li><strong>Digital Verification:</strong> SystemVerilog TB, Cocotb, Verilator, xsim, Modelsim</li>
-        <li><strong>Software Development:</strong> Python, C++, C, Java</li>
-        <li><strong>Linux Development:</strong> Ubuntu, Fedora, Buildroot, Yocto, PetaLinux</li>
-        <li><strong>Embedded Programming:</strong> Embedded C, Codasip, Arduino, Raspberry Pi</li>
-        <li><strong>Software Systems:</strong> Git, CI/CD, Matlab, Simulink Real-time, OpenCV, SVN</li>
-        <li><strong>Debugging:</strong> Simulation with Testbenches, Hardware with Logic Analyzers, Scopes, and other
-          tools</li>
-        <li><strong>Project Management Tools:</strong> Agile PLM, Confluence, DOORS NG, OpenText MBPM</li>
+      <ul class="skills-list">
+        <li><strong>Digital Design:</strong> SystemVerilog RTL, Vivado, DSP, High-Speed Interfaces, Tcl, VHDL, Quartus, Libero</li>
+        <li><strong>Verification:</strong> SystemVerilog TB, cocotb, Verilator, xsim, ModelSim</li>
+        <li><strong>Software:</strong> Python, C++, C, Java</li>
+        <li><strong>Linux:</strong> Ubuntu, Fedora, Buildroot, Yocto, PetaLinux</li>
+        <li><strong>Embedded:</strong> Embedded C, Codasip, Arduino, Raspberry&nbsp;Pi</li>
+        <li><strong>Systems & Tools:</strong> Git, CI/CD, MATLAB, Simulink Real-Time, OpenCV, SVN</li>
+        <li><strong>Debug:</strong> Simulation with TBs; on-hardware with logic analyzers, scopes, and related tools</li>
+        <li><strong>Process:</strong> Agile PLM, Confluence, DOORS NG, OpenText MBPM</li>
       </ul>
     </section>
 
@@ -196,102 +115,75 @@
     <section>
       <h2>Experience</h2>
 
-      <div class="job avoid-break">
-        <table class="jobhead">
-          <tr>
-            <td class="jobleft">
-              <div class="role">Embedded Systems Engineer • FIRST RF</div>
-              <div class="where">Boulder, CO</div>
-            </td>
-            <td class="jobright">10/2024–Present</td>
-          </tr>
-        </table>
+      <div class="block">
+        <div class="row">
+          <div class="left">
+            <div class="role">Embedded Systems Engineer <span class="place">• FIRST RF</span></div>
+            <div class="loc">Boulder, CO</div>
+          </div>
+          <div class="right">10/2024–Present</div>
+        </div>
         <ul>
-          <li>Architected and implemented the full FPGA/HDL stack for a production RADAR system, owning design from
-            module level RTL to system integration. Included high speed interfaces, on-chip processing, and device to
-            device synchronization.</li>
-          <li>Delivered a new DSP pipeline that increased usable bandwidth 4×, improved SNR by ~20 dB, reduced logic
-            utilization, and lowered end to end latency; modeled algorithms in Python/NumPy and verified with exhaustive
-            testbenches.</li>
-          <li>Engineered a cycle accurate, latency constrained data path to meet strict RADAR timeline requirements;
-            performed both simulation based and on hardware validation in partnership with embedded/software teams.</li>
-          <li>Modernized the internal HDL build system, enabling Verilator + cocotb flows; authored FIRST RF’s first
-            cocotb testbenches and led full team adoption.</li>
+          <li>Architected and implemented the FPGA/HDL stack for a production RADAR system, from module-level RTL to system integration; covered high-speed interfaces, on-chip processing, and device synchronization.</li>
+          <li>Delivered a DSP pipeline that increased usable bandwidth 4×, improved SNR by ~20&nbsp;dB, reduced logic utilization, and lowered end-to-end latency; modeled in Python/NumPy and verified with exhaustive testbenches.</li>
+          <li>Engineered a cycle-accurate, latency-constrained data path to meet strict RADAR timing; validated via simulation and on-hardware with embedded/software teams.</li>
+          <li>Modernized HDL build flows (Verilator + cocotb); authored FIRST RF’s first cocotb testbenches and led team adoption.</li>
         </ul>
       </div>
 
-      <div class="job avoid-break">
-        <table class="jobhead">
-          <tr>
-            <td class="jobleft">
-              <div class="role">Electrical Engineer II • Laboratory for Atmospheric and Space Physics</div>
-              <div class="where">Boulder, CO</div>
-            </td>
-            <td class="jobright">06/2022–10/2024</td>
-          </tr>
-        </table>
+      <div class="block">
+        <div class="row">
+          <div class="left">
+            <div class="role">Electrical Engineer II <span class="place">• Laboratory for Atmospheric and Space Physics</span></div>
+            <div class="loc">Boulder, CO</div>
+          </div>
+          <div class="right">06/2022–10/2024</div>
+        </div>
         <ul>
-          <li>Operated as the lead of electronic ground support equipment (EGSE) for NASA’s Libera mission, including
-            the design and implementation of several test systems; designs included integration of COTS equipment,
-            custom PCBs, and FPGA logic.</li>
-          <li>Developed test racks from scratch: specifying, procuring, and assembling IT hardware, writing hardware
-            control firmware, designing interface harnesses, and authoring control software to enable long duration,
-            mission critical testing and integration.</li>
-          <li>Served as the cognizant EGSE engineer, owning multiple projects from concept through qualification;
-            including rigorous design reviews and compliance processes, and multi-team coordination to ensure
-            delivery readiness and long term mission support.</li>
+          <li>Led electronic ground support equipment (EGSE) for NASA’s Libera mission; designed test systems integrating COTS equipment, custom PCBs, and FPGA logic.</li>
+          <li>Built test racks end-to-end: specified/procured IT hardware, wrote control firmware, designed interface harnesses, and authored control software for long-duration, mission-critical testing.</li>
+          <li>Owned projects from concept through qualification, navigating reviews and compliance, coordinating across teams for delivery readiness and long-term mission support.</li>
         </ul>
       </div>
 
-      <div class="job avoid-break">
-        <table class="jobhead">
-          <tr>
-            <td class="jobleft">
-              <div class="role">Electrical Engineering Intern • Laboratory for Atmospheric and Space Physics</div>
-              <div class="where">Boulder, CO</div>
-            </td>
-            <td class="jobright">01/2021–06/2022</td>
-          </tr>
-        </table>
+      <div class="block">
+        <div class="row">
+          <div class="left">
+            <div class="role">Electrical Engineering Intern <span class="place">• Laboratory for Atmospheric and Space Physics</span></div>
+            <div class="loc">Boulder, CO</div>
+          </div>
+          <div class="right">01/2021–06/2022</div>
+        </div>
         <ul>
-          <li>Wrote low level, hardware interface flight software for the Command and Data Handling (C&DH) Unit on the
-            SPRITE
-            cubesat
-            mission.</li>
-          <li>Developed an FPGA based solution to test the scientific instrument on the ground with a simple, robust
-            interface to enable rapid verification.</li>
-          <li>Wrote an image compression algorithm that reduced the scientific data to 1/10th of the original size,
-            enabling the mission to meet TX requirements.</li>
+          <li>Wrote low-level hardware-interface flight software for the Command &amp; Data Handling (C&amp;DH) unit on the SPRITE CubeSat mission.</li>
+          <li>Developed an FPGA-based ground test solution with a simple, robust interface for rapid instrument verification.</li>
+          <li>Implemented an image compression algorithm reducing data volume to ~10% of original, enabling TX requirements.</li>
         </ul>
       </div>
-
     </section>
 
     <!-- Education -->
-    <section class="avoid-break">
+    <section>
       <h2>Education</h2>
-      <div class="job avoid-break">
-        <table class="jobhead">
-          <tr>
-            <td class="jobleft">
-              <div class="role">MSEE, Embedded Systems Engineering • University of Colorado, Boulder</div>
-              <div class="where">Boulder, CO</div>
-            </td>
-            <td class="jobright">08/2023–Present</td>
-          </tr>
-        </table>
+
+      <div class="block">
+        <div class="row">
+          <div class="left">
+            <div class="role">MSEE, Embedded Systems Engineering <span class="place">• University of Colorado Boulder</span></div>
+            <div class="loc">Boulder, CO</div>
+          </div>
+          <div class="right">08/2023–Present</div>
+        </div>
       </div>
 
-      <div class="job avoid-break">
-        <table class="jobhead">
-          <tr>
-            <td class="jobleft">
-              <div class="role">BS, Electrical and Computer Engineering • University of Colorado, Boulder</div>
-              <div class="where">Boulder, CO</div>
-            </td>
-            <td class="jobright">08/2019–05/2022</td>
-          </tr>
-        </table>
+      <div class="block">
+        <div class="row">
+          <div class="left">
+            <div class="role">BS, Electrical &amp; Computer Engineering <span class="place">• University of Colorado Boulder</span></div>
+            <div class="loc">Boulder, CO</div>
+          </div>
+          <div class="right">08/2019–05/2022</div>
+        </div>
       </div>
     </section>
 
@@ -299,52 +191,41 @@
     <section>
       <h2>Projects</h2>
 
-      <div class="project avoid-break">
-        <div class="project-title">Skyler Phased Array RADAR</div>
+      <div class="block">
+        <div class="proj-title">Skyler Phased Array RADAR</div>
         <ul>
-          <li>Designed the end to end DSP chain and datapath (filtering, decimation/interpolation, mixing, 1 Gb/s
-            Ethernet framing), then implemented cycle accurate RTL with thorough TB coverage.</li>
-          <li>Built a layered verification strategy (SystemVerilog TB + cocotb with Verilator) to catch interface,
-            timing, and algorithmic defects early; mirrored tests on hardware for parity and end product verification.
-          </li>
-          <li>Drove cross functional integration and bring up with embedded and application software, closing timing on
-            high utilization designs while meeting RADAR timeline constraints.</li>
+          <li>Designed end-to-end DSP chain and datapath (filtering, decim/interp, mixing, 1&nbsp;Gb/s Ethernet framing); implemented cycle-accurate RTL with thorough TB coverage.</li>
+          <li>Built layered verification (SystemVerilog TB + cocotb/Verilator) to catch interface, timing, and algorithmic defects early; mirrored tests on hardware for parity and product validation.</li>
+          <li>Drove cross-functional bring-up with embedded/app software; closed timing on high-utilization designs within RADAR constraints.</li>
         </ul>
       </div>
 
-      <div class="project avoid-break">
-        <div class="project-title">Libera SSIM</div>
+      <div class="block">
+        <div class="proj-title">Libera SSIM</div>
         <ul>
-          <li>Led the design of an advanced, high reliability test fixture used to validate the performance of the
-            Libera instrument.</li>
-          <li>Created a test rack to simulate the JPSS-3 spacecraft with 100% of interfaces accurately recreated to
-            maximize “test as you fly” ideology.</li>
-          <li>Integrated a precisely synchronized FPGA with &lt;10 ns timing error.</li>
+          <li>Led design of a high-reliability test fixture to validate Libera instrument performance.</li>
+          <li>Created a rack that simulated JPSS-3 spacecraft with complete interface replication to support “test as you fly.”</li>
+          <li>Integrated a precisely synchronized FPGA with &lt;10&nbsp;ns timing error.</li>
         </ul>
       </div>
 
-      <div class="project avoid-break">
-        <div class="project-title">Libera EL Lifetest</div>
+      <div class="block">
+        <div class="proj-title">Libera EL Lifetest</div>
         <ul>
-          <li>Designed, implemented, and qualified the test bed for a 5 year pre-flight motor verification lifespan
-            test.</li>
-          <li>Designed a custom interconnect PCB and multiple harnesses to integrate dozens of components into a
-            cohesive system with minimal harnessing.
-          </li>
+          <li>Designed, implemented, and qualified the testbed for a five-year pre-flight motor verification lifespan test.</li>
+          <li>Designed a custom interconnect PCB and harnesses to integrate dozens of components into a cohesive system.</li>
         </ul>
       </div>
 
-      <div class="project avoid-break">
-        <div class="project-title">5-Stage RISC-V Processor</div>
+      <div class="block">
+        <div class="proj-title">5-Stage RISC-V Processor</div>
         <ul>
-          <li>Built a fully functional processor in Codasip using C++, then adapted to synthesizable RTL with I/O
-            management and off chip RAM access.</li>
-          <li>Achieved 100% verification coverage; designed with full ISA support and ECC memory.</li>
+          <li>Built a functional processor in Codasip (C++), then adapted to synthesizable RTL with I/O management and off-chip RAM access.</li>
+          <li>Achieved 100% verification coverage; full ISA support and ECC memory.</li>
         </ul>
       </div>
     </section>
 
   </div>
 </body>
-
 </html>
