Reverted back to old descriptions of jobs and projects, kept formatting changes

--- a/Resume/full_resume.html
+++ b/Resume/full_resume.html
@@ -353,7 +353,7 @@
         <div class="project-title">Skyler Phased Array RADAR</div>
         <ul>
           <li>Designed the end-to-end DSP chain and datapath (filtering, decimation/interpolation, mixing, 1 Gb/s
-            Ethernet framing), then implemented cycle-accurate RTL with thorough TB coverage.</li>
+            Ethernet framing), then implemented cycle-accurate RTL with thorough tesetbench coverage.</li>
           <li>Built a layered verification strategy (SystemVerilog TB + cocotb with Verilator) to catch interface,
             timing, and algorithmic defects early; mirrored tests on hardware for parity and end product verification.
           </li>
