--- a/Resume/fpga_resume.html
+++ b/Resume/fpga_resume.html
@@ -124,11 +124,16 @@
           <div class="right">10/2024–Present</div>
         </div>
         <ul>
-          <li>Architected and implemented the FPGA/HDL stack for a production RADAR system, from module-level RTL to system integration; covered high-speed interfaces, on-chip processing, and device synchronization.</li>
-          <li>Delivered a DSP pipeline that increased usable bandwidth 4×, improved SNR by ~20&nbsp;dB, reduced logic utilization, and lowered end-to-end latency; modeled in Python/NumPy and verified with exhaustive testbenches.</li>
-          <li>Engineered a cycle-accurate, latency-constrained data path to meet strict RADAR timing; validated via simulation and on-hardware with embedded/software teams.</li>
-          <li>Modernized HDL build flows (Verilator + cocotb); authored FIRST RF’s first cocotb testbenches and led team adoption.</li>
-        </ul>
+          <li>Architected and implemented the full FPGA/HDL stack for a production RADAR system, owning design from
+            module-level RTL to system integration. Included high speed interfaces, on-chip processing, and device to
+            device synchronization.</li>
+          <li>Delivered a new DSP pipeline that increased usable bandwidth 4×, improved SNR by ~20 dB, reduced logic
+            utilization, and lowered end-to-end latency; modeled algorithms in Python/NumPy and verified with exhaustive
+            testbenches.</li>
+          <li>Engineered a cycle-accurate, latency-constrained data path to meet strict RADAR timeline requirements;
+            performed both simulation-based and on-hardware validation in partnership with embedded/software teams.</li>
+          <li>Modernized the internal HDL build system, enabling Verilator + cocotb flows; authored FIRST RF’s first
+            cocotb testbenches and led full team adoption.</li>        </ul>
       </div>
 
       <div class="block">
@@ -140,9 +145,15 @@
           <div class="right">06/2022–10/2024</div>
         </div>
         <ul>
-          <li>Led electronic ground support equipment (EGSE) for NASA’s Libera mission; designed test systems integrating COTS equipment, custom PCBs, and FPGA logic.</li>
-          <li>Built test racks end-to-end: specified/procured IT hardware, wrote control firmware, designed interface harnesses, and authored control software for long-duration, mission-critical testing.</li>
-          <li>Owned projects from concept through qualification, navigating reviews and compliance, coordinating across teams for delivery readiness and long-term mission support.</li>
+          <li>Operated as the lead of electronic ground support equipment (EGSE) for NASA’s Libera mission, including
+            the design and implementation of several test systems; designs included integration of COTS equipment,
+            custom PCBs, and FPGA logic.</li>
+          <li>Developed test racks from scratch: specifying, procuring, and assembling IT hardware, writing hardware
+            control firmware, designing interface harnesses, and authoring control software to enable long-duration,
+            mission-critical testing and integration.</li>
+          <li>Served as the cognizant EGSE engineer, owning multiple projects from concept through qualification;
+            including rigorous design reviews and compliance processes, and multi-team coordination to ensure
+            delivery-readiness and long-term mission support.</li>
         </ul>
       </div>
 
@@ -155,9 +166,12 @@
           <div class="right">01/2021–06/2022</div>
         </div>
         <ul>
-          <li>Wrote low-level hardware-interface flight software for the Command &amp; Data Handling (C&amp;DH) unit on the SPRITE CubeSat mission.</li>
-          <li>Developed an FPGA-based ground test solution with a simple, robust interface for rapid instrument verification.</li>
-          <li>Implemented an image compression algorithm reducing data volume to ~10% of original, enabling TX requirements.</li>
+          <li>Wrote low-level, hardware interface flight software for the Command and Data Handling (C&DH) Unit on the
+            SPRITE cubesat mission.</li>
+          <li>Developed an FPGA-based solution to test the scientific instrument on the ground with a simple, robust
+            interface to enable rapid verification.</li>
+          <li>Wrote an image compression algorithm that reduced the scientific data to 1/10th of the original size,
+            enabling the mission to meet TX requirements.</li>
         </ul>
       </div>
     </section>
@@ -194,34 +208,43 @@
       <div class="block">
         <div class="proj-title">Skyler Phased Array RADAR</div>
         <ul>
-          <li>Designed end-to-end DSP chain and datapath (filtering, decim/interp, mixing, 1&nbsp;Gb/s Ethernet framing); implemented cycle-accurate RTL with thorough TB coverage.</li>
-          <li>Built layered verification (SystemVerilog TB + cocotb/Verilator) to catch interface, timing, and algorithmic defects early; mirrored tests on hardware for parity and product validation.</li>
-          <li>Drove cross-functional bring-up with embedded/app software; closed timing on high-utilization designs within RADAR constraints.</li>
+          <li>Designed the end-to-end DSP chain and datapath (filtering, decimation/interpolation, mixing, 1 Gb/s
+            Ethernet framing), then implemented cycle-accurate RTL with thorough TB coverage.</li>
+          <li>Built a layered verification strategy (SystemVerilog TB + cocotb with Verilator) to catch interface,
+            timing, and algorithmic defects early; mirrored tests on hardware for parity and end product verification.
+          </li>
+          <li>Drove cross-functional integration and bring-up with embedded and application software, closing timing on
+            high utilization designs while meeting RADAR timeline constraints.</li>
         </ul>
       </div>
 
       <div class="block">
         <div class="proj-title">Libera SSIM</div>
         <ul>
-          <li>Led design of a high-reliability test fixture to validate Libera instrument performance.</li>
-          <li>Created a rack that simulated JPSS-3 spacecraft with complete interface replication to support “test as you fly.”</li>
-          <li>Integrated a precisely synchronized FPGA with &lt;10&nbsp;ns timing error.</li>
+          <li>Led the design of an advanced, high reliability test fixture used to validate the performance of the
+            Libera instrument.</li>
+          <li>Created a test rack to simulate the JPSS-3 spacecraft with 100% of interfaces accurately recreated to
+            maximize “test as you fly” ideology.</li>
+          <li>Integrated a precisely synchronized FPGA with &lt;10 ns timing error.</li>
         </ul>
       </div>
 
       <div class="block">
         <div class="proj-title">Libera EL Lifetest</div>
         <ul>
-          <li>Designed, implemented, and qualified the testbed for a five-year pre-flight motor verification lifespan test.</li>
-          <li>Designed a custom interconnect PCB and harnesses to integrate dozens of components into a cohesive system.</li>
+          <li>Designed, implemented, and qualified the test bed for a 5-year pre-flight motor verification lifespan
+            test.</li>
+          <li>Designed a custom interconnect PCB and multiple harnesses to integrate dozens of components into a
+            cohesive system with minimal harnessing.
         </ul>
       </div>
 
       <div class="block">
         <div class="proj-title">5-Stage RISC-V Processor</div>
         <ul>
-          <li>Built a functional processor in Codasip (C++), then adapted to synthesizable RTL with I/O management and off-chip RAM access.</li>
-          <li>Achieved 100% verification coverage; full ISA support and ECC memory.</li>
+          <li>Built a fully functional processor in Codasip using C++, then adapted to synthesizable RTL with I/O
+            management and off-chip RAM access.</li>
+          <li>Achieved 100% verification coverage; designed with full ISA support and ECC memory.</li>
         </ul>
       </div>
     </section>
