--- a/Resume/fpga_resume.html
+++ b/Resume/fpga_resume.html
@@ -125,13 +125,13 @@
         </div>
         <ul>
           <li>Architected and implemented the full FPGA/HDL stack for a production RADAR system, owning design from
-            module-level RTL to system integration. Included high speed interfaces, on-chip processing, and device to
+            module level RTL to system integration. Included high speed interfaces, on chip processing, and device to
             device synchronization.</li>
           <li>Delivered a new DSP pipeline that increased usable bandwidth 4×, improved SNR by ~20 dB, reduced logic
-            utilization, and lowered end-to-end latency; modeled algorithms in Python/NumPy and verified with exhaustive
+            utilization, and lowered end to end latency; modeled algorithms in Python/NumPy and verified with exhaustive
             testbenches.</li>
-          <li>Engineered a cycle-accurate, latency-constrained data path to meet strict RADAR timeline requirements;
-            performed both simulation-based and on-hardware validation in partnership with embedded/software teams.</li>
+          <li>Engineered a cycle accurate, latency constrained data path to meet strict RADAR timeline requirements;
+            performed both simulation based and on hardware validation in partnership with embedded/software teams.</li>
           <li>Modernized the internal HDL build system, enabling Verilator + cocotb flows; authored FIRST RF’s first
             cocotb testbenches and led full team adoption.</li>        </ul>
       </div>
@@ -149,11 +149,11 @@
             the design and implementation of several test systems; designs included integration of COTS equipment,
             custom PCBs, and FPGA logic.</li>
           <li>Developed test racks from scratch: specifying, procuring, and assembling IT hardware, writing hardware
-            control firmware, designing interface harnesses, and authoring control software to enable long-duration,
-            mission-critical testing and integration.</li>
+            control firmware, designing interface harnesses, and authoring control software to enable long duration,
+            mission critical testing and integration.</li>
           <li>Served as the cognizant EGSE engineer, owning multiple projects from concept through qualification;
             including rigorous design reviews and compliance processes, and multi-team coordination to ensure
-            delivery-readiness and long-term mission support.</li>
+            delivery readiness and long term mission support.</li>
         </ul>
       </div>
 
@@ -209,11 +209,11 @@
         <div class="proj-title">Skyler Phased Array RADAR</div>
         <ul>
           <li>Designed the end-to-end DSP chain and datapath (filtering, decimation/interpolation, mixing, 1 Gb/s
-            Ethernet framing), then implemented cycle-accurate RTL with thorough TB coverage.</li>
+            Ethernet framing), then implemented cycle accurate RTL with thorough TB coverage.</li>
           <li>Built a layered verification strategy (SystemVerilog TB + cocotb with Verilator) to catch interface,
             timing, and algorithmic defects early; mirrored tests on hardware for parity and end product verification.
           </li>
-          <li>Drove cross-functional integration and bring-up with embedded and application software, closing timing on
+          <li>Drove cross-functional integration and bring up with embedded and application software, closing timing on
             high utilization designs while meeting RADAR timeline constraints.</li>
         </ul>
       </div>
@@ -224,7 +224,7 @@
           <li>Led the design of an advanced, high reliability test fixture used to validate the performance of the
             Libera instrument.</li>
           <li>Created a test rack to simulate the JPSS-3 spacecraft with 100% of interfaces accurately recreated to
-            maximize “test as you fly” ideology.</li>
+            maximize “test like you fly” ideology.</li>
           <li>Integrated a precisely synchronized FPGA with &lt;10 ns timing error.</li>
         </ul>
       </div>
@@ -232,9 +232,9 @@
       <div class="block">
         <div class="proj-title">Libera EL Lifetest</div>
         <ul>
-          <li>Designed, implemented, and qualified the test bed for a 5-year pre-flight motor verification lifespan
+          <li>Designed, implemented, and qualified the test bed for a 5 year pre-flight motor verification lifespan
             test.</li>
-          <li>Designed a custom interconnect PCB and multiple harnesses to integrate dozens of components into a
+          <li>Engineered a custom interconnect PCB and multiple harnesses to integrate dozens of components into a
             cohesive system with minimal harnessing.
         </ul>
       </div>
@@ -243,7 +243,7 @@
         <div class="proj-title">5-Stage RISC-V Processor</div>
         <ul>
           <li>Built a fully functional processor in Codasip using C++, then adapted to synthesizable RTL with I/O
-            management and off-chip RAM access.</li>
+            management and off chip RAM access.</li>
           <li>Achieved 100% verification coverage; designed with full ISA support and ECC memory.</li>
         </ul>
       </div>
